[package]
name = "backblaze-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
rand = "0.8.5"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.63.0"
reqwest = {version = "0.12.9", features = ["json"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
